fixing overlapping wiki button

--- a/css/wiki.css
+++ b/css/wiki.css
@@ -78,6 +78,7 @@
 .wiki-btn {
     display: inline-flex;
     align-items: center;
+    margin-bottom: 10px;
     padding: 0.5rem 1rem;
     background-color: var(--purple);
     color: var(--background);
